--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -16,6 +16,11 @@
         #result { margin-top: 20px; padding: 15px; border-radius: 4px; text-align: center; display: none; }
         .success { background-color: #d4edda; color: #155724; border: 1px solid #c3e6cb; }
         .error { background-color: #f8d7da; color: #721c24; border: 1px solid #f5c6cb; }
+        .info-box { margin-top: 30px; padding: 20px; background: #fff; border: 1px solid #ddd; border-radius: 8px; }
+        .info-box h2 { margin-top: 0; font-size: 1.2em; color: #333; border-bottom: 2px solid #007bff; padding-bottom: 10px; margin-bottom: 15px; }
+        .info-row { display: flex; justify-content: space-between; padding: 8px 0; border-bottom: 1px solid #eee; }
+        .info-row:last-child { border-bottom: none; }
+        .info-label { font-weight: bold; color: #555; }
     </style>
 </head>
 <body>
@@ -32,6 +37,15 @@
     <button onclick="deposit()">입금 실행</button>
 
     <div id="result"></div>
+
+    <div class="info-box">
+        <h2>계좌 상세 정보</h2>
+        <div class="info-row"><span class="info-label">계좌번호</span><span id="val-accountNo">-</span></div>
+        <div class="info-row"><span class="info-label">소유주</span><span id="val-userName">-</span></div>
+        <div class="info-row"><span class="info-label">잔액</span><span id="val-balance">-</span></div>
+        <div class="info-row"><span class="info-label">최종 수정일</span><span id="val-updateDate">-</span></div>
+        <button onclick="loadAccountInfo()" style="margin-top: 15px; background-color: #6c757d;">정보 새로고침</button>
+    </div>
 </div>
 
 <script>
@@ -52,11 +66,35 @@
             
             resultDiv.className = response.ok ? 'success' : 'error';
             resultDiv.innerText = text;
+            if (response.ok) {
+                loadAccountInfo();
+            }
         } catch (error) {
             resultDiv.className = 'error';
             resultDiv.innerText = "통신 에러: " + error.message;
         }
     }
+
+    async function loadAccountInfo() {
+        const accountNo = document.getElementById('accountNo').value;
+        if (!accountNo) return;
+
+        try {
+            const response = await fetch(`/api/account/${accountNo}`);
+            if (response.ok) {
+                const data = await response.json();
+                document.getElementById('val-accountNo').innerText = data.accountNo;
+                document.getElementById('val-userName').innerText = data.userName;
+                document.getElementById('val-balance').innerText = new Intl.NumberFormat('ko-KR').format(data.balance) + "원";
+                document.getElementById('val-updateDate').innerText = new Date(data.updateDate).toLocaleString();
+            }
+        } catch (e) {
+            console.error("정보 조회 실패", e);
+        }
+    }
+    
+    // 초기 로드 시 조회
+    window.onload = loadAccountInfo;
 </script>
 </body>
 </html>
